kubernetes/kyak/apps/istio-system/gateway/app/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    app: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '${SECRET_PUBLIC_DOMAIN}'
        - '*.${SECRET_PUBLIC_DOMAIN}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '${SECRET_PUBLIC_DOMAIN}'
        - '*.${SECRET_PUBLIC_DOMAIN}'
        - istio-gateway.istio-system.svc.cluster.local
        - istio-gateway.istio-system.svc
        - istio-gateway.istio-system
      tls:
        credentialName: istio-prod-cert-tls
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
